--- a/public/locales/en/client.json
+++ b/public/locales/en/client.json
@@ -1,5 +1,5 @@
 {
-  "page_title": "Order Kiosk - Customer Interface",
+  "page_title": "ECR Tournament - Kiosk",
   "products_title": "Available Products",
   "cart_title": "Your Cart",
   "form": {
