--- a/public/locales/fr/client.json
+++ b/public/locales/fr/client.json
@@ -1,5 +1,5 @@
 {
-  "page_title": "Borne de Commande - Interface Client",
+  "page_title": "ECR Tournament - Buvette",
   "products_title": "Produits disponibles",
   "cart_title": "Votre panier",
   "form": {
